cli/tests/snapshots/arguments__quota_disable.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"quota\", \"disable\", \"/mnt\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: false,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Quota(
        QuotaCommand {
            subcommand: Disable(
                QuotaDisableCommand {
                    path: "/mnt",
                },
            ),
        },
    ),
}
