cli/tests/snapshots/arguments__quota_enable_simple.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"quota\", \"enable\", \"-s\", \"/mnt\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: 0,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Quota(
        QuotaCommand {
            subcommand: Enable(
                QuotaEnableCommand {
                    path: "/mnt",
                    simple: true,
                },
            ),
        },
    ),
}
