cli/tests/snapshots/arguments__quota_rescan.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"quota\", \"rescan\", \"/mnt\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: 0,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Quota(
        QuotaCommand {
            subcommand: Rescan(
                QuotaRescanCommand {
                    status: false,
                    wait: false,
                    wait_norescan: false,
                    path: "/mnt",
                },
            ),
        },
    ),
}
