cli/tests/snapshots/arguments__quota_status.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"quota\", \"status\", \"/mnt\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: 0,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Quota(
        QuotaCommand {
            subcommand: Status(
                QuotaStatusCommand {
                    path: "/mnt",
                    is_enabled: false,
                },
            ),
        },
    ),
}
