cli/tests/snapshots/arguments__receive_basic.snap
---
source: cli/tests/arguments.rs
expression: "parse(&[\"btrfs\", \"receive\", \"/mnt/dest\"])"
---
Arguments {
    global: GlobalOptions {
        verbose: 0,
        quiet: false,
        dry_run: false,
        log: None,
        format: None,
    },
    command: Receive(
        ReceiveCommand {
            mount: Some(
                "/mnt/dest",
            ),
            file: None,
            terminate_on_end: false,
            chroot: false,
            max_errors: None,
            root_mount: None,
            force_decompress: false,
            dump: false,
        },
    ),
}
