cli/tests/snapshots/arguments__reflink_clone_missing_target.snap
---
source: cli/tests/arguments.rs
expression: "parse_err(&[\"btrfs\", \"reflink\", \"clone\", \"/mnt/src.bin\"])"
---
error: the following required arguments were not provided:
  <TARGET>
